Change background color and include logo button

--- a/css/hero.css
+++ b/css/hero.css
@@ -19,7 +19,7 @@ body {
   color:#95A5A6;
 }
 .section.main {
-  background-color:#F0F0F0;
+  background-color:#00b0bd;
 }
 .icon-block {
   font-size:5em;
