--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 html, body{
-    background: #fff;
-    background-image: url('../images/background.jpg');
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
