--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  animation-name: fadeIn;
+}
+
 html, body{
     background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/background.jpg');
     background-repeat: no-repeat;
@@ -16,11 +30,13 @@ td {
   padding-bottom: 10px;
 }
 div.container {
-    border-style: solid;
-    border-color: white;
     max-width: 500px;
     background-color: white;
     background: rgba(0, 0, 0, 0);
+}
+div.items {
+    -webkit-animation-duration: 2s;
+    -webkit-animation-delay: 0.5s;
 }
 h1.title {
     color: white;
