--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,11 @@
   }
 }
 
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
 .fadeIn {
   animation-name: fadeIn;
 }
@@ -36,7 +41,7 @@ div.container {
 }
 div.items {
     -webkit-animation-duration: 2s;
-    -webkit-animation-delay: 0.5s;
+    -webkit-animation-delay: 1s;
 }
 h1.title {
     color: white;
