Added navbar and changed positions/alignments

--- a/css/main.css
+++ b/css/main.css
@@ -4,34 +4,63 @@
     src: url('../fonts/VanadineBold.ttf');
 }
 
-html, body{
-    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/background.jpg');
+html{
+    background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
-    height: 100%;
+    min-height: 100%;
+    min-width: 100%;
 }
 body {
+    align-items: center;
+    min-height: 100%;
+    min-width: 100%;
+}
+.container {
+    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh; /* These two lines are counted as one :-)       */
     display: flex;
     align-items: center;
+}
+.items {
+    -webkit-animation-duration: 2s;
+    -webkit-animation-delay: 2s;
+}
+a {
+    display: inline-block;
+    margin: 0 25px 0 0;
 }
 td {
   padding-left: 25px;
   padding-right: 25px;
 }
-div.container {
-    max-width: 500px;
-    background-color: white;
-    background: rgba(0, 0, 0, 0);
-}
-div.items {
-    -webkit-animation-duration: 2s;
-    -webkit-animation-delay: 1s;
-}
 h1.title {
     font-family: vanadine;
     color: white;
+    margin: auto;
 }
 h2.subtitle {
+    color: white;
+    margin: auto;
+}
+.navbar {
+    background: rgba(0, 0, 0, 0.3);
+    -webkit-animation-duration: 2s;
+    -webkit-animation-delay: 1s;
+    align-self: flex-start;
+}
+a.links {
+    color: #82BBCC;
+}
+a.links:hover {
+    color: white;
+}
+i.fa {
+    color: #82BBCC;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+i.fa:hover {
     color: white;
 }
