Change font for navbar items and route to about.html and portfolio.html and home
fixed the routing by setting up the html of the other pages and added D
L to route to home until I design a logo lol

--- a/css/main.css
+++ b/css/main.css
@@ -51,9 +51,11 @@ h2.subtitle {
     align-self: flex-start;
 }
 a.links {
+    font-family: vanadine;
     color: #82BBCC;
 }
 a.links:hover {
+    font-family: vanadine;
     color: white;
 }
 i.fa {
