ready, just need to add portfolio blog posts

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,9 +1,9 @@
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-left">
-        <div class="row">
+    <section id="contact" class="container content-section text-left" style="padding-bottom: 100px;">
+        <div class="row offset">
             <div class="col-lg-8 col-lg-offset-0">
                 <h2>Contact</h2>
-                <p>Dolor reprehenderit repellendus, optio labore odio at tempore debitis nisi. Quasi debitis tenetur eaque molestias non porro odio sapiente.</p>
+                <p>Feel free to hit me up on my email or through one of my social media accounts!</p>
                 <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
