--- a/_includes/download.html
+++ b/_includes/download.html
@@ -4,7 +4,7 @@
             <div class="container">
                 <div class="col-lg-0 col-lg-offset-2">
                     <h2>Portfolio</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
+                    <p>Coming soon! In the meantime, check out my resume and my GitHub!</p>
                 </div>
             </div>
         </div>
