--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -66,7 +66,7 @@ a:focus {
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: #000000;
+    background-color: #22292E;
     /*background-color: {{ site.color.primary-dark }};*/
 }
 
@@ -81,7 +81,7 @@ a:focus {
 .navbar-custom .navbar-brand .navbar-toggle {
     padding: 4px 6px;
     font-size: 16px;
-    color: #000;
+    color: #fff;
 }
 
 .navbar-custom .navbar-brand .navbar-toggle:focus,
@@ -95,21 +95,20 @@ a:focus {
 
 .navbar-custom .nav li.active {
     outline: none;
-    background-color: rgba(0,0,0,.3);
+    background-color: rgba(255,255,255,.3);
 }
 
 .navbar-custom .nav li a {
     -webkit-transition: background .3s ease-in-out;
     -moz-transition: background .3s ease-in-out;
     transition: background .3s ease-in-out;
-    color: #000;
 }
 
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus,
 .navbar-custom .nav li a.active {
     outline: 0;
-    background-color: rgba(0,0,0,.3);
+    background-color: rgba(255,255,255,.3);
 }
 
 @media(min-width:767px) {
@@ -125,11 +124,11 @@ a:focus {
 
     .top-nav-collapse {
         padding: 0;
-        background-color: {{ site.color.primary-dark }};
+        background-color: #22292E;
     }
 
     .navbar-custom.top-nav-collapse {
-        border-bottom: 1px solid rgba(0,0,0,.3);
+        border-bottom: 1px solid rgba(255,255,255,.3);
     }
 }
 
@@ -195,7 +194,7 @@ a:focus {
 .btn-circle:focus {
     outline: 0;
     color: #fff;
-    background: rgba(0,0,0,.1);
+    background: rgba(255,255,255,.1);
 }
 
 .btn-circle i.animated {
@@ -250,16 +249,16 @@ a:focus {
     }
 }
 
-.content-section {
-    padding-top: 100px;
-}
+/*.content-section {
+    padding-top: 10px;
+}*/
 
 .download-section {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(/img/downloads-bg.jpg) no-repeat center center scroll;
-    background-color: {{ site.color.primary-dark }};
+    /*background: url(/img/downloads-bg.jpg) no-repeat center center scroll;*/
+    background-color: #22292E;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -268,7 +267,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 200px;
+        padding-top: 100px;
     }
 
     .download-section {
