--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-home"></i> <span class="light">David</span> Le
+                    <i class="fa fa-home"></i> <span class="light">DL</span>
                 </a>
             </div>
 
