Fix navbar burger and update about

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -81,16 +81,17 @@ a:focus {
 .navbar-custom .navbar-brand .navbar-toggle {
     padding: 4px 6px;
     font-size: 16px;
-    color: #fff;
+    color: #ffffff;
 }
 
 .navbar-custom .navbar-brand .navbar-toggle:focus,
 .navbar-custom .navbar-brand .navbar-toggle:active {
     outline: 0;
+    color: #ffffff;
 }
 
 .navbar-custom a {
-    color: #fff;
+    color: #ffffff;
 }
 
 .navbar-custom .nav li.active {
@@ -111,6 +112,10 @@ a:focus {
     background-color: rgba(255,255,255,.3);
 }
 
+#nav-toggle-button{
+    color: #ffffff;
+}
+
 @media(min-width:767px) {
     .navbar {
         padding: 20px 0;
@@ -124,7 +129,7 @@ a:focus {
 
     .top-nav-collapse {
         padding: 0;
-        background-color: #22292E;
+        background-color: #ffffff;
     }
 
     .navbar-custom.top-nav-collapse {
