--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -111,6 +111,10 @@ a:focus {
     background-color: rgba(255,255,255,.3);
 }
 
+#nav-toggle-button {
+    color: #ffffff;
+}
+
 @media(min-width:767px) {
     .navbar {
         padding: 20px 0;
