--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,14 +1,15 @@
     <!-- About Section -->
-    <section id="about" class="container content-section text-left">
+    <section id="about" class="content-section text-left" style="padding-left: 50px; padding-right: 50px;">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-0">
+            <div class="col-lg-6 col-lg-offset-1">
                 <h2>About Me</h2>
                 <p>Hi! My name is David, and I am a third year undergraduate student studying Computational Media at Georgia Tech with a concentration in Media and Interaction Design.</p>
-                <p>I started out as a Computer Science major, and switched to Computational Media in my second year because I realized that I am more interested in front-end development and design.</p>
+                <p>I started out as a Computer Science major, and switched to Computational Media in my second year because I realized that I am more interested in being involved with the user experience of products through research, design, and engineering.</p>
                 <a href="DavidLe_Resume.pdf" class="btn btn-default btn-lg" target="_blank">Check out my resume!</a>
+
             </div>
-            <div class="col-lg-0 col-lg-offset-0 image-container">
-                <img src ="/img/proPic.JPG" style="max-width: 25%;"></img>
+            <div class="col-lg-0 col-lg-offset-0 image-container" style="align-self: flex-end; padding-left: 15px;">
+                <img src ="/img/proPic.JPG" style="max-width: 32%; object-position: center;"></img>
             </div>
         </div>
     </section>
