--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-left" style="padding-bottom: 100px;">
-        <div class="row offset">
-            <div class="col-lg-8 col-lg-offset-0">
+    <section id="contact" class="container content-section text-left" style="padding-left: 50px; padding-right: 50px;">
+        <div class="row">
+            <div class="col-lg-6 col-lg-offset-1">
                 <h2>Contact</h2>
                 <p>Feel free to hit me up on my email or through one of my social media accounts!</p>
                 <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
