--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -254,20 +254,17 @@ a:focus {
     }
 }
 
-/*.content-section {
-    padding-top: 10px;
-}*/
+.content-section {
+    width: 100%;
+    padding: 50px 0;
+    background-color: #ffffff;
+}
 
 .download-section {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    /*background: url(/img/downloads-bg.jpg) no-repeat center center scroll;*/
     background-color: #22292E;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
 }
 
 @media(min-width:767px) {
