--- a/_includes/download.html
+++ b/_includes/download.html
@@ -1,8 +1,8 @@
     <!-- Download Section -->
-    <section id="download" class="content-section text-right">
+    <section class="containercontent-section text-right">
         <div class="download-section">
-            <div class="container">
-                <div class="col-lg-0 col-lg-offset-2">
+            <div>
+                <div class="col-lg-0 col-lg-offset-2" style="padding-left: 50px; padding-right: 50px;">
                     <h2>Portfolio</h2>
                     <p>Coming soon! In the meantime, check out my resume and my GitHub!</p>
                 </div>
