--- a/_includes/download.html
+++ b/_includes/download.html
@@ -1,5 +1,5 @@
     <!-- Download Section -->
-    <section class="containercontent-section text-right">
+    <section id="download" class="containercontent-section text-right">
         <div class="download-section">
             <div>
                 <div class="col-lg-0 col-lg-offset-2" style="padding-left: 50px; padding-right: 50px;">
