--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -260,7 +260,7 @@ a:focus {
     background-color: #ffffff;
 }
 
-.download-section {
+.portfolio-section {
     width: 100%;
     padding: 50px 0;
     color: #fff;
@@ -272,7 +272,7 @@ a:focus {
         padding-top: 100px;
     }
 
-    .download-section {
+    .portfolio-section {
         padding: 100px 0;
     }
 
