--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,10 +1,10 @@
     <!-- Download Section -->
-    <section id="download" class="containercontent-section text-right">
-        <div class="download-section">
+    <section id="portfolio" class="containercontent-section text-right">
+        <div class="portfolio-section">
             <div>
                 <div class="col-lg-0 col-lg-offset-2" style="padding-left: 50px; padding-right: 50px;">
                     <h2>Portfolio</h2>
-                    <p>Coming soon! In the meantime, check out my resume and my GitHub!</p>
+                    <p>Under Construction! In the meantime, check out my resume and my GitHub!</p>
                 </div>
             </div>
         </div>
