portfolio grid & modals

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     {% include about.html %}
     {% include portfolio.html %}
     {% include contact.html %}
+    {% include modals.html %}
     {% include js.html %}
     </body>
 </html>
