--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,11 +1,30 @@
-    <!-- Download Section -->
+    <!-- Portfolio Section -->
     <section id="portfolio" class="containercontent-section text-right">
         <div class="portfolio-section">
             <div>
-                <div class="col-lg-0 col-lg-offset-2" style="padding-left: 50px; padding-right: 50px;">
+                <div class="col-lg-7 col-lg-offset-3">
                     <h2>Portfolio</h2>
-                    <p>Under Construction! In the meantime, check out my resume and my GitHub!</p>
                 </div>
             </div>
+            <div class="container">
+            <div class="row">
+            {% for post in site.posts %}
+                <div class="col-md-4 col-sm-6 portfolio-item" style="align-items: center;">
+                    <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>{{ post.title }}</h4>
+                        <p class="text-muted">{{ post.subtitle }}</p>
+                    </div>
+                </div>
+            {% endfor %}
+            </div>
+        </div>
         </div>
     </section>
