--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -17,15 +17,15 @@
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                             <p style="text-align: justify;">{{ post.description }}</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong>{{ post.client }}
+                                <li>Project Type:
+                                    <strong>{{ post.type }}
                                     </strong>
                                 </li>
                                 <li>Date:
                                     <strong>{{ post.project-date }}
                                     </strong>
                                 </li>
-                                <li>Service:
+                                <li>Category:
                                     <strong>{{ post.category }}
                                     </strong>
                                 </li>
