--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -366,7 +366,7 @@ body {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
-    color: {{ site.color.navbar }};
+    color: #051c42;
 }
 
 #portfolio .portfolio-item .portfolio-link {
