Take down template

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,6 +3,7 @@
         <div class="portfolio-section">
             <div class="container">
                 <h2>Portfolio</h2>
+                <p>Under construction! In the meantime, check out my github and behance!</p>
             <div class="row">
             {% for post in site.posts %}
                 <div class="col-md-4 col-sm-6 portfolio-item" style="align-items: center;">
