Create pdf path and refactor what has pdf

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
                 <h2>About Me</h2>
                 <p>Hi! My name is David, and I am a third year undergraduate student studying Computational Media at Georgia Tech with a concentration in Media and Interaction Design.</p>
                 <p>I started out as a Computer Science major, and switched to Computational Media in my second year because I realized that I am more interested in being involved with the user experience of products through its front end development and design.</p>
-                <a href="DavidLe_Resume.pdf" class="btn btn-default btn-lg" target="_blank">Check out my resume!</a>
+                <a href="/pdf/DavidLe_Resume.pdf" class="btn btn-default btn-lg" target="_blank">Check out my resume!</a>
 
             </div>
             <div class="col-lg-0 col-lg-offset-0 image-container" style="align-self: flex-end; padding-left: 15px;">
