--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,8 +3,11 @@
         <div class="row">
             <div class="col-lg-6 col-lg-offset-1">
                 <h2>About Me</h2>
-                <p>Hi! My name is David, and I am a third year undergraduate student studying Computational Media at Georgia Tech with a concentration in Media and Interaction Design.</p>
-                <p>I started out as a Computer Science major, and switched to Computational Media in my second year because I realized that I am more interested in being involved with the user experience of products through its front end development and design.</p>
+                <p>Hi! My name is David, and I am a senior at Georgia Tech studying Computational Media with a concentration in Media and Interaction Design.</p>
+                <p>I started out as a Computer Science major, and switched to Computational Media in my second year because after having done software engineering internships,
+                my passions align with the intersection of design and technology. I'm specifically interested in visual and user experience design as well as front end development.
+                I'm expected to graduate May 2020, and am looking for full time opportunities in product management and design.</p>
+                <p>I am currently working on updating this site to include more of my work, but in the mean time, take a look at my resume below!</p>
                 <a href="/pdf/DavidLe_Resume.pdf" class="btn btn-default btn-lg" target="_blank">Check out my resume!</a>
 
             </div>
