update squarespace url

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
                 <p>I started out as a Computer Science major, and switched to Computational Media in my second year because after having done software engineering internships,
                 my passions align with the intersection of design and technology. I'm specifically interested in visual and user experience design as well as front end development.
                 I'm expected to graduate May 2020, and am looking for full time opportunities in product management and design.</p>
-                <p>I am currently working on updating this site to include more of my work (you can see my progress on that <a href="http://chinchilla-flatworm-fdct.squarespace.com">here</a>!), but in the mean time, take a look at my resume below!</p>
+                <p>I am currently working on updating this site to include more of my work (you can see my progress on that <a href="http://davidhle.squarespace.com/">here</a>!), but in the mean time, take a look at my resume below!</p>
                 <a href="/pdf/DavidLe_Resume.pdf" class="btn btn-default btn-lg" target="_blank">Check out my resume!</a>
 
             </div>
